# server/docs/swagger.yaml
@@ -178,6 +178,13 @@ definitions:
       id:
         type: number
     type: object
+  request.IdsReq:
+    properties:
+      ids:
+        items:
+          type: integer
+        type: array
+    type: object
   request.Login:
     properties:
       captcha:
@@ -273,12 +280,12 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: 分页获取api列表
+      - description: ID
         in: body
         name: data
         required: true
         schema:
-          $ref: '#/definitions/request.SearchApiParams'
+          $ref: '#/definitions/model.SysApi'
       produces:
       - application/json
       responses:
@@ -288,7 +295,30 @@ paths:
             type: string
       security:
       - ApiKeyAuth: []
-      summary: 分页获取api
+      summary: 删除api
+      tags:
+      - SysApi
+  /api/deleteApisByIds:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.IdsReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"删除成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 删除api
       tags:
       - SysApi
   /api/getAllApis:
@@ -305,6 +335,29 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 获取所有的Api 不分页
+      tags:
+      - SysApi
+  /api/getApiList:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 分页获取api列表
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.SearchApiParams'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 分页获取api
       tags:
       - SysApi
   /authority/copyAuthority:
